# critic_viz_plugin

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/critics_viz_rviz/: critics_panel.hpp
src/: critics_panel.cpp
