<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>critics_viz_rviz</name>
  <version>0.1.0</version>
  <description>RViz2 panel for visualizing Nav2 MPPI CriticsStats in real time</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>pluginlib</depend>

  <build_depend>qt5-default</build_depend>
  <build_depend>libqt5charts5-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
